add: added header section.

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Illdy</title>
+    <link rel="stylesheet" href="../src/sass/style.css" />
     <!-- Bootsrap Css -->
     <link
       rel="stylesheet"
@@ -22,7 +23,7 @@
     <!-- Nav -->
     <nav>
       <ul
-        class="d-flex list-unstyled bg-warning opacity-50 justify-content-center"
+        class="d-flex list-unstyled bg-warning opacity-50 justify-content-center m-0"
       >
         <li class="p-2">
           <a class="text-decoration-none link-light" href="#home">Home</a>
@@ -52,6 +53,29 @@
       </ul>
     </nav>
     <!-- End Nav-->
+
+    <!-- Header -->
+    <header id="header">
+      <div class="container text-center">
+        <h1 class="text-white fw-bold">Clean . Slick . Pixel Perfect</h1>
+        <p class="text-white">
+          lldy is a great one-page theme, perfect for developers and designers
+          but also for someone who just wants a new website for his business.
+          Try it now!
+        </p>
+        <button
+          class="text-white border-3 border-white border bg-transparent px-5 py-2"
+        >
+          Learn more
+        </button>
+        <button
+          class="text-white border-3 border-white border bg-warning px-5 py-2 right"
+        >
+          Download
+        </button>
+      </div>
+    </header>
+    <!-- End Header -->
 
     <!-- Bootstrap JS -->
     <script src="../src/libraries/bootstrap/js/bootstrap.bundle.min.js"></script>
