add: added about section.

--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,61 @@
     </header>
     <!-- End Header -->
 
+    <!-- Main -->
+    <main>
+      <section id="about">
+        <div class="container text-center">
+          <h2 class="fw-bold text-dark-emphasis">About</h2>
+          <p class="text-secondary">
+            It is an amazng one-page theme with great features that offers an
+            incredible experience. It is easy to install, make changes, adapt
+            for your business. A modern design with clean lines and styling for
+            a wide variety of content, exactly how a business design should be.
+            You can add as many images as you want to the main header area and
+            turn them into slider.
+          </p>
+          <div class="row justify-content-center">
+            <div class="col-lg-4 col-md-6 col-12">
+              <div class="wrapper overflow">
+                <div class="img overflow-hidden">
+                  <img
+                    class="img-fluid"
+                    src="../src/images/0.jpg"
+                    alt="typography"
+                  />
+                </div>
+                <h4>Typography</h4>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+              <div class="wrapper">
+                <div class="img overflow-hidden">
+                  <img
+                    class="img-fluid"
+                    src="../src/images/1.jpg"
+                    alt="design"
+                  />
+                </div>
+                <h4>Design</h4>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+              <div class="wrapper">
+                <div class="img overflow-hidden">
+                  <img
+                    class="img-fluid"
+                    src="../src/images/2.jpg"
+                    alt="nature"
+                  />
+                </div>
+                <h4>Nature</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- End Main -->
     <!-- Bootstrap JS -->
     <script src="../src/libraries/bootstrap/js/bootstrap.bundle.min.js"></script>
   </body>
