fix: minor typos in code.

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,8 @@
 
     <!-- Main -->
     <main>
-      <section id="about">
+      <!-- About -->
+      <section id="about" class="my-5">
         <div class="container text-center">
           <h2 class="fw-bold text-dark-emphasis">About</h2>
           <p class="text-secondary">
@@ -103,7 +104,7 @@
                 <h4>Typography</h4>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-12">
+            <div class="col-lg-4 col-md-6 col-12 my-3">
               <div class="wrapper">
                 <div class="img overflow-hidden">
                   <img
@@ -130,6 +131,7 @@
           </div>
         </div>
       </section>
+      <!-- End About -->
     </main>
     <!-- End Main -->
     <!-- Bootstrap JS -->
