add: added project section.

--- a/public/index.html
+++ b/public/index.html
@@ -132,6 +132,45 @@
         </div>
       </section>
       <!-- End About -->
+
+      <!-- Project -->
+      <section id="project" class="mb-5">
+        <div class="container text-center">
+          <h2 class="fw-bold text-dark-emphasis">Projects</h2>
+          <p>You'll love our work. Check it out!</p>
+          <div class="row">
+            <div class="col-lg-6 col-md-6 p-0 m-0">
+              <img
+                class="img-fluid w-100"
+                src="../src/images/front-page-project-1.jpg"
+                alt="project"
+              />
+            </div>
+            <div class="col-lg-6 col-md-6 p-0 m-0">
+              <img
+                class="img-fluid w-100"
+                src="../src/images/front-page-project-2.jpg"
+                alt="project"
+              />
+            </div>
+            <div class="col-lg-6 col-md-6 p-0 m-0">
+              <img
+                class="img-fluid w-100"
+                src="../src/images/front-page-project-3.jpg"
+                alt="project"
+              />
+            </div>
+            <div class="col-lg-6 col-md-6 p-0 m-0">
+              <img
+                class="img-fluid w-100"
+                src="../src/images/front-page-project-4.jpg"
+                alt="project"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Project -->
     </main>
     <!-- End Main -->
     <!-- Bootstrap JS -->
