add: added testimonials section.

--- a/public/index.html
+++ b/public/index.html
@@ -171,6 +171,28 @@
         </div>
       </section>
       <!-- End Project -->
+
+      <!-- Testimonials -->
+      <section id="testimonials">
+        <div class="container text-center py-5">
+          <h4 class="fw-bold text-white">Testimonials</h4>
+          <img
+            class="img-fluid rounded-circle my-3"
+            src="../src/images/mike-muller-127x127.jpg"
+            alt="mike"
+          />
+          <p class="text-white p-5 rounded-4 w-75 m-auto">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem ab
+            est praesentium a esse eveniet. Tempore, esse molestiae. Porro
+            laborum nobis, aperiam explicabo hic, necessitatibus facere eaque
+            cum nam saepe assumenda pariatur ad, itaque incidunt doloribus?
+            Aliquid earum maiores praesentium amet vero nam! Assumenda deserunt,
+            cupiditate sit esse in quia.
+          </p>
+          <h2 class="text-white fs-1 mt-3">Mike Muller</h2>
+        </div>
+      </section>
+      <!-- End Testimonials -->
     </main>
     <!-- End Main -->
     <!-- Bootstrap JS -->
