add: added services section.

--- a/public/index.html
+++ b/public/index.html
@@ -193,6 +193,53 @@
         </div>
       </section>
       <!-- End Testimonials -->
+
+      <!-- Services -->
+      <section id="services" class="my-5">
+        <div class="container text-center">
+          <h2 class="fw-bold text-dark-emphasis">Services</h2>
+          <p class="text-secondary">
+            In order to help you grow your business, our carefully selected
+            experts can advise you in in the following areas:
+          </p>
+          <div class="row justify-content-center">
+            <div class="col-lg-4 col-md-6">
+              <i
+                class="fa-solid fa-pen fa-2x text-danger"
+                aria-hidden="true"
+              ></i>
+              <h5 class="text-danger">Web Design</h5>
+              <p class="text-secondary">
+                Consectetur adipiscing elit. Praesent molestie urna hendrerit
+                erat tincidunt tempus. Aliquam a leo risus. Fusce a metus non
+                augue dapibus porttitor at in mauris. Pellentesque commodo...
+              </p>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <i
+                class="fa-solid fa-pen fa-2x text-warning"
+                aria-hidden="true"
+              ></i>
+              <h5 class="text-warning">WEB DEVELOPMENT</h5>
+              <p class="text-secondary">
+                Consectetur adipiscing elit. Praesent molestie urna hendrerit
+                erat tincidunt tempus. Aliquam a leo risus. Fusce a metus non
+                augue dapibus porttitor at in mauris. Pellentesque commodo...
+              </p>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <i class="fa-solid fa-pen fa-2x text-" aria-hidden="true"></i>
+              <h5 class="text-danger">Web Design</h5>
+              <p class="text-secondary">
+                Consectetur adipiscing elit. Praesent molestie urna hendrerit
+                erat tincidunt tempus. Aliquam a leo risus. Fusce a metus non
+                augue dapibus porttitor at in mauris. Pellentesque commodo...
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Services -->
     </main>
     <!-- End Main -->
     <!-- Bootstrap JS -->
