add: added news section.

--- a/public/index.html
+++ b/public/index.html
@@ -240,6 +240,68 @@
         </div>
       </section>
       <!-- End Services -->
+
+      <!-- News -->
+      <section id="news" class="bg-secondary">
+        <div class="container text-center py-5">
+          <h2 class="fw-bold text-white">Latest News</h2>
+          <p class="text-white">
+            If you are interested in the latest articles in the industry, take a
+            sneak peek at our blog. You have nothing to loose!
+          </p>
+          <div class="row justify-content-center">
+            <div class="col-lg-4 col-md-6 col-12">
+              <div class="wrapper bg-white">
+                <div class="img overflow-hidden">
+                  <img
+                    class="img-fluid w-100"
+                    src="../src/images/news0.jpg"
+                    alt="nature"
+                  />
+                </div>
+                <p class="p-3">
+                  Stunning One Page WordPress Theme For Masses This theme is not
+                  just free, it is free for private and commercial use since it
+                  is licensed under GPL…
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+              <div class="wrapper bg-white">
+                <div class="img overflow-hidden">
+                  <img
+                    class="img-fluid w-100"
+                    src="../src/images/news1.jpg"
+                    alt="nature"
+                  />
+                </div>
+                <p class="p-3">
+                  Hello world! Welcome to colorlib.com. This is our first post
+                  around Illdy WordPress theme. Now show that you can make out
+                  of it.…
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+              <div class="wrapper bg-white">
+                <div class="img overflow-hidden">
+                  <img
+                    class="img-fluid w-100"
+                    src="../src/images/news2.jpg"
+                    alt="nature"
+                  />
+                </div>
+                <p class="p-3">
+                  We Have Made Illdy Theme SEO Friendly Illdy One Page WordPress
+                  theme is fully SEO friendly and is ready to help you to
+                  achieve the highest rankings…
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End News -->
     </main>
     <!-- End Main -->
     <!-- Bootstrap JS -->
