add: added team section.

--- a/public/index.html
+++ b/public/index.html
@@ -302,6 +302,119 @@
         </div>
       </section>
       <!-- End News -->
+
+      <!-- Team -->
+      <section id="team" class="my-5">
+        <div class="container text-center">
+          <h2 class="fw-bold text-dark-emphasis">Team</h2>
+          <p class="text-secondary">
+            Meet the people that are going to take your business to the next
+            level.
+          </p>
+          <div class="row justify-content-center">
+            <div class="col-lg-4 col-md-6 col-12 mt-3">
+              <div class="wrapper d-flex shadow p-3 align-items-center">
+                <img
+                  class="img-fluid rounded-circle h-25"
+                  src="../src/images/front-page-team-1.jpg"
+                  alt="team"
+                />
+                <div class="content">
+                  <h5 class="fw-bold">Mark Lawrance</h5>
+                  <h6>Web Designer</h6>
+                  <p class="text-secondary">
+                    Creative, detail-oriented, always focused.
+                  </p>
+                  <a href="#">
+                    <i
+                      class="fa-brands fa-facebook fa-2x link-warning"
+                      aria-hidden="true"
+                    ></i
+                  ></a>
+                  <a href="#">
+                    <i
+                      class="fa-brands fa-twitter fa-2x link-warning mx-2"
+                      aria-hidden="true"
+                    ></i></a
+                  ><a href="#"
+                    ><i
+                      class="fa-brands fa-linkedin fa-2x link-warning"
+                      aria-hidden="true"
+                    ></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12 mt-3">
+              <div class="wrapper d-flex shadow p-3 align-items-center">
+                <img
+                  class="img-fluid rounded-circle h-25"
+                  src="../src/images/front-page-team-2.jpg"
+                  alt="team"
+                />
+                <div class="content">
+                  <h5 class="fw-bold">John Smith</h5>
+                  <h6>SEO Specialist</h6>
+                  <p class="text-secondary">
+                    Curious, tech-geeck and gets serious when it comes to work.
+                  </p>
+                  <a href="#">
+                    <i
+                      class="fa-brands fa-facebook fa-2x link-warning"
+                      aria-hidden="true"
+                    ></i
+                  ></a>
+                  <a href="#">
+                    <i
+                      class="fa-brands fa-twitter fa-2x link-warning mx-2"
+                      aria-hidden="true"
+                    ></i></a
+                  ><a href="#"
+                    ><i
+                      class="fa-brands fa-linkedin fa-2x link-warning"
+                      aria-hidden="true"
+                    ></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12 mt-3">
+              <div class="wrapper d-flex shadow p-3 align-items-center">
+                <img
+                  class="img-fluid rounded-circle h-25"
+                  src="../src/images/mike-muller-127x127.jpg"
+                  alt="team"
+                />
+                <div class="content">
+                  <h5 class="fw-bold">Mike Muller</h5>
+                  <h6>Developer</h6>
+                  <p class="text-secondary">
+                    Enthusiastic, passionate with great sense of humor.
+                  </p>
+                  <a href="#">
+                    <i
+                      class="fa-brands fa-facebook fa-2x link-warning"
+                      aria-hidden="true"
+                    ></i
+                  ></a>
+                  <a href="#">
+                    <i
+                      class="fa-brands fa-twitter fa-2x link-warning mx-2"
+                      aria-hidden="true"
+                    ></i></a
+                  ><a href="#"
+                    ><i
+                      class="fa-brands fa-linkedin fa-2x link-warning"
+                      aria-hidden="true"
+                    ></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Team -->
     </main>
     <!-- End Main -->
     <!-- Bootstrap JS -->
