add: added footer.

--- a/public/index.html
+++ b/public/index.html
@@ -417,6 +417,81 @@
       <!-- End Team -->
     </main>
     <!-- End Main -->
+
+    <!-- Footer -->
+    <footer class="bg-secondary py-5">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-4 col-md-4 col-12">
+            <h3 class="fw-bold text-white">PRODUCT</h3>
+            <ul class="list-unstyled">
+              <li class="py-1">
+                <a class="text-decoration-none link-warning" href="#"
+                  >Our world</a
+                >
+              </li>
+              <li class="py-1">
+                <a class="text-decoration-none link-warning" href="#">CLub</a>
+              </li>
+              <li class="py-1">
+                <a class="text-decoration-none link-warning" href="#">News</a>
+              </li>
+              <li class="py-1">
+                <a class="text-decoration-none link-warning" href="#"
+                  >Annnouncement</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-4 col-md-4 col-12">
+            <h3 class="fw-bold text-white">INFORMATION</h3>
+            <ul class="list-unstyled">
+              <li class="py-1">
+                <a class="text-decoration-none link-warning" href="#"
+                  >Pricing</a
+                >
+              </li>
+              <li class="py-1">
+                <a class="text-decoration-none link-warning" href="#">Terms</a>
+              </li>
+              <li class="py-1">
+                <a class="text-decoration-none link-warning" href="#"
+                  >Affilates</a
+                >
+              </li>
+              <li class="py-1">
+                <a class="text-decoration-none link-warning" href="#">Blog</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-4 col-md-4 col-12">
+            <h3 class="fw-bold text-white">SUPPORT</h3>
+            <ul class="list-unstyled">
+              <li class="py-1">
+                <a class="text-decoration-none link-warning" href="#"
+                  >Documentation</a
+                >
+              </li>
+              <li class="py-1">
+                <a class="text-decoration-none link-warning" href="#">Faqs</a>
+              </li>
+              <li class="py-1">
+                <a class="text-decoration-none link-warning" href="#">Forums</a>
+              </li>
+              <li class="py-1">
+                <a class="text-decoration-none link-warning" href="#"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="text-center text-white">
+          Theme: Illdy. © Copyright 2024. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
+    <!-- End Footer -->
     <!-- Bootstrap JS -->
     <script src="../src/libraries/bootstrap/js/bootstrap.bundle.min.js"></script>
   </body>
