fix: minor typos in code.

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       href="../src/fonts/fontawesome/css/fontawesome.min.css"
     />
     <!-- Main Css -->
-    <link rel="stylesheet" href="../src/sass/style.css" />
+    <link rel="stylesheet" href="../src/css/style.css" />
   </head>
   <body>
     <!-- Nav -->
@@ -134,7 +134,7 @@
       <!-- End About -->
 
       <!-- Project -->
-      <section id="project" class="mb-5">
+      <section id="project">
         <div class="container text-center">
           <h2 class="fw-bold text-dark-emphasis">Projects</h2>
           <p>You'll love our work. Check it out!</p>
